@@ -1,3 +1,8 @@
+2001-02-01  Michael Yount <csf@moscow.com>
+
+	* Makefile.PL:  (check_nr_install) Test to see if installation
+	as the majordomo user is feasible, and report any problems.
+
 2001-01-31  Michael Yount <csf@moscow.com>
 
 	* bin/mj_wwwadm, bin/mj_wwwusr:  Various cosmetic changes,
